# transcribe-cli

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Commands.md  Configuration.md  Development.md  First-Time-Setup.md  GPU-and-CUDA.md  Home.md  HuggingFace-Diarization.md  Installation.md  Ollama.md  Troubleshooting.md  Usage.md  _Sidebar.md
src/local_whisper_transcribe/: __init__.py  audio.py  cli.py  config.py  cuda_runtime.py  device.py  diarize.py  import_transcript.py  install_extra.py  models.py  ollama_ops.py  output.py  postprocess.py  progress_ui.py  prompts.py  setup_wizard.py  system_checks.py  transcribe.py
tests/: test_audio.py  test_config.py  test_cuda_runtime.py  test_device.py  test_diarize.py  test_import_transcript.py  test_install.py  test_models.py  test_output.py  test_postprocess.py  test_progress_ui.py  test_transcribe.py
